--- a/create_proj/.vscode/settings.json
+++ b/create_proj/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "cloudsourcemanager",
         "createproj",
-        "creds"
+        "creds",
+        "Etag"
     ]
 }
