--- a/workflows/myEventWorkflow.yaml
+++ b/workflows/myEventWorkflow.yaml
@@ -10,8 +10,42 @@
             assign:
             - bucket: ${event.data.bucket}
             - object: ${event.data.name}
-        - return_bucket_object:
-                return:
-                    bucket: ${bucket}
-                    object: ${object}
+        # - return_bucket_object:
+        #         return:
+        #             bucket: ${bucket}
+        #             object: ${object}
+        - init:
+            assign:
+            - project_id: ${sys.get_env("GOOGLE_CLOUD_PROJECT_ID")}
+            - file_path: ${"gs://" + bucket + "/" + object}
+            - dataset: "dataset_test"
+            - table: "table_test"
+            - location: "asia-northeast1"
+        - create_dataset:
+            call: googleapis.bigquery.v2.datasets.insert
+            args:
+                projectId: ${project_id}
+                body:
+                    datasetReference:
+                        datasetId: ${dataset}
+                        projectId: ${project_id}
+                    access[].role: "roles/bigquery.dataViewer"
+                    access[].specialGroup: "projectReaders"
+        - insert_table:
+            call: googleapis.bigquery.v2.jobs.insert
+            args:
+                projectId: ${project_id}
+                body:
+                    configuration:
+                        jobType: LOAD
+                        load:
+                            sourceUris: ${file_path}
+                            writeDisposition: "WRITE_TRUNCATE"
+                            destinationTable:
+                                projectId: ${project_id}
+                                datasetId: ${dataset}
+                                tableId: ${table}
+            result: query_result
+        - the_end:
+            return: ${query_result}
   
