--- a/workflows/myEventWorkflow.yaml
+++ b/workflows/myEventWorkflow.yaml
@@ -26,6 +26,7 @@
             args:
                 projectId: ${project_id}
                 body:
+                    location: ${location}
                     datasetReference:
                         datasetId: ${dataset}
                         projectId: ${project_id}
